[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/LocationDemo.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[node name="Spatial" type="Spatial"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_right = 438.0
margin_bottom = 180.0
text = "Get Loc Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 26.0
margin_top = 200.0
margin_right = 293.0
margin_bottom = 534.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="longitude text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_right = 267.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
text = "longitude
"

[node name="latitude text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 49.0
margin_right = 267.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 45 )
text = "latitude"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accuracy text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 98.0
margin_right = 267.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 45 )
text = "accuracy"

[node name="verticalAccuracyMeters text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 147.0
margin_right = 267.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 45 )
text = "verticalAccuracyMeters"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="altitude text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 196.0
margin_right = 267.0
margin_bottom = 241.0
rect_min_size = Vector2( 0, 45 )
text = "altitude"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 245.0
margin_right = 267.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 45 )
text = "speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time text" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 294.0
margin_right = 267.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 45 )
text = "time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Values" type="VBoxContainer" parent="Control"]
margin_left = 211.0
margin_top = 200.0
margin_right = 478.0
margin_bottom = 539.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="longitudeValue" type="RichTextLabel" parent="Control/Values"]
margin_right = 267.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
text = "none"

[node name="latitudeValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 49.0
margin_right = 267.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 45 )
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accuracyValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 98.0
margin_right = 267.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 45 )
text = "none"

[node name="verticalAccuracyMetersValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 147.0
margin_right = 267.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 45 )
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="altitudeValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 196.0
margin_right = 267.0
margin_bottom = 241.0
rect_min_size = Vector2( 0, 45 )
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 245.0
margin_right = 267.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 45 )
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeValue" type="RichTextLabel" parent="Control/Values"]
margin_top = 294.0
margin_right = 267.0
margin_bottom = 339.0
rect_min_size = Vector2( 0, 45 )
text = "none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.591281, 0.806465, 0, -0.806465, 0.591281, 0, 5.80835, 3.29531 )

[node name="Ground" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 60, 0, 0, 0, 1, 0, 0, 0, 60, 0, 0, 0 )
shape = SubResource( 1 )

[connection signal="button_down" from="Control/Button" to="Control" method="_on_Button_button_down"]
